log
Tue 18 Apr 2023 04:00:34 AM UTC: 
 tests:  1|8
total_score: 0/70
fcd4955
Tue 18 Apr 2023 04:10:29 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:5: error: ‘new’ undeclared (first use in this function)
   44 |     new->lower_than = lower_than;
      |     ^~~
treemap.c:44:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c9037aa
Tue 18 Apr 2023 04:10:52 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
953586b
Tue 18 Apr 2023 04:11:01 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
1fdaa09
Tue 18 Apr 2023 04:20:39 AM UTC: 
 treemap.c | 44 ++++++++++++++++++++++++--------------------
 1 file changed, 24 insertions(+), 20 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:53:16: error: ‘map’ undeclared (first use in this function)
   53 |             if(map->lower_than(tree->current,key) == 1) tree->current = tree->current->left;
      |                ^~~
treemap.c:53:16: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:54:54: error: expected ‘;’ before ‘}’ token
   54 |             else tree->current = tree->current->right
      |                                                      ^
      |                                                      ;
   55 |         }
      |         ~                                             
Compilation failed
25fb09b
Tue 18 Apr 2023 04:20:45 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:53:16: error: ‘map’ undeclared (first use in this function)
   53 |             if(map->lower_than(tree->current,key) == 1) tree->current = tree->current->left;
      |                ^~~
treemap.c:53:16: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
8018c5f
Tue 18 Apr 2023 04:20:55 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
39c3f52
Tue 18 Apr 2023 04:21:36 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
c3d000f
Tue 18 Apr 2023 04:23:44 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
fc17021
Tue 18 Apr 2023 04:29:49 AM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|0
2509d74
Tue 18 Apr 2023 04:41:42 AM UTC: 
 treemap.c | 26 ++++++++++++++++++++------
 1 file changed, 20 insertions(+), 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:80:22: error: ‘node’ undeclared (first use in this function)
   80 |             parent = node;
      |                      ^~~~
treemap.c:80:22: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:86:75: error: ‘new_node’ undeclared (first use in this function)
   86 |         if (tree->lower_than(parent->pair->key, key) == 0) parent->left = new_node
      |                                                                           ^~~~~~~~
treemap.c:86:83: error: expected ‘;’ before ‘else’
   86 |         if (tree->lower_than(parent->pair->key, key) == 0) parent->left = new_node
      |                                                                                   ^
      |                                                                                   ;
   87 |         else parent->right = new_node;
      |         ~~~~                                                                       
Compilation failed
cffd7bb
Tue 18 Apr 2023 04:42:20 AM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  12|6
total_score: 15/70
b41ed4d
Tue 18 Apr 2023 04:42:51 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
a808388
